[tool.poetry]
name = "cypher-bot"
version = "0.1.0"
description = ""
authors = ["agrides <ilya.kot@hotmail.com>"]
readme = "README.md"
packages = [{include = "cypher_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
pytelegrambotapi = "^4.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
